2006-11-21  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_module_init): Adapt to 2.6.19 utsname().

2006-11-21  Frank Ch. Eigler  <fche@elastic.org>

	PR 3556.
	* translate.cxx (emit_module_init): Emit code to check
	system_utsname against translate-time version/machine strings.

2006-11-20  David Smith  <dsmith@redhat.com>

	* tapsets.cxx
	(dwarf_var_expanding_copy_visitor::visit_target_symbol):  BZ
	1382.  Target variables can be accessed in return probes.  A new
	function entry probe is generated that saves the target variables
	so that they can be accesssed in the return probe.

2006-11-19  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Signal parse error if a tapset script
	is given as the user script.

2006-11-15  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (d_v_e_c_v::visit_target_symbol): Restore lost
	exception-saving functionality that improves error messages
	for incorrect $target expressions.
	(translate_components): Systematize error messages somewhat.
	* translate.cxx (emit_function, emit_probe): Clarify
	"array locals" error message.

2006-11-10  David Smith  <dsmith@redhat.com>

	* tapsets.cxx
	(dwarf_var_expanding_copy_visitor::visit_target_symbol): Minor
	improvement to error handling by throwing exceptions before
	allocations are done.

2006-11-10  Frank Ch. Eigler  <fche@elastic.org>

	* stap.1.in: On urging of Adam Jackson, add blurbs on array syntax
	and default limits.

2006-11-09  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (staprun_LDADD): Need PROCFLAGS here too.
	
2006-11-09  Martin Hunt  <hunt@redhat.com>	

	* Makefile.am (staprun_CFLAGS): New. Use PROCFLAGS.

	* configure.ac: Add PROCFLAGS. Processor-dependent 
	compilation flags.
	* configure: Rebuilt.
	* Makefile.in: Rebuilt.
	
2006-11-09  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwarf_query::dwarf_query): Looks for "maxactive"
	return probe variant.
	(dwarf_derived_probe::dwarf_derived_probe): Initializes